# mRAG

./: .gitignore  README.md  api.py  mrag_mcp.py  mrag_project_structure.md  on_agents.md  pyproject.toml  pyrefly.toml  rekey_migration.py
examples/: seed_npc_profiles.py
mrag/: __init__.py
mrag/bridge/: __init__.py  interface.py
mrag/hash/: __init__.py  ngram_hasher.py
mrag/prefetch/: __init__.py  coordinator.py
mrag/router/: __init__.py  affect_router.py  decay.py
mrag/schema/: __init__.py  bridge.py  payload.py
mrag/store/: __init__.py  engram_table.py  manager.py  sqlite_backend.py
scripts/: benchmark_mrag.py  demo_inference.py  generate_npc_origins.py
tests/: conftest.py  test_decay.py  test_generic_and_modular.py  test_latency.py  test_route_accuracy.py
tests/fixtures/: mock_packets.json
